--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
                 <span class="name">The Master and the Margarita</span>
                 <button class="delete">delete</button>
             </li>
+            <li>
+                <span class="name">The Servant</span>
+                <button class="delete">delete</button>
+            </li>
+            <li>
+                <span class="name">The Master</span>
+                <button class="delete">delete</button>
+            </li>
+            <li>
+                <span class="name">The IIMargarita</span>
+                <button class="delete">delete</button>
+            </li>
         </ul>
     </div>
     <div>
